--- a/10.通过Keepalived+HAProxy实现Nginx高可用及负载均衡.md
+++ b/10.通过Keepalived+HAProxy实现Nginx高可用及负载均衡.md
@@ -53,23 +53,23 @@ nginx--2
 [root@svr1 ~]# systemctl stop firewalld && systemctl disable firewalld && sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/selinux/config && setenforce 0
 [root@svr1 ~]# yum install -y epel-* && yum install -y haproxy
 [root@svr1 ~]# vim /etc/haproxy/haproxy.cfg
-frontend  nginx
-    mode tcp
-    bind *:9090
-    option tcplog
-    default_backend             app
+frontend nginx
+    mode tcp                     # 设置前端模式为 TCP，适合处理 TCP 流量
+    bind *:9090                  # 绑定在所有 IP 地址的 9090 端口上，接收客户端请求
+    option tcplog                # 启用 TCP 日志记录选项
+    default_backend app          # 默认后端服务器组为 'app'
 
 backend app
-    balance     roundrobin
-    server  nginx1 192.168.100.11:80 check
-    server  nginx2 192.168.100.12:80 check
+    balance roundrobin           # 使用轮询算法进行负载均衡
+    server nginx1 192.168.100.11:80 check  # 定义第一个后端服务器，IP 为 192.168.100.11，端口为 80，并启用健康检查
+    server nginx2 192.168.100.12:80 check  # 定义第二个后端服务器，IP 为 192.168.100.12，端口为 80，并启用健康检查
 
 listen stats
-    bind *:1080
-    stats auth admin:12345678
-    stats refresh 5s
-    stats realm HAProxy\ Statistics
-    stats uri /status
+    bind *:1080                  # 绑定在所有 IP 地址的 1080 端口上，提供监控界面
+    stats auth admin:12345678    # 设置访问统计信息页面的登录凭据，用户名为 admin，密码为 12345678
+    stats refresh 5s             # 每 5 秒刷新一次统计信息
+    stats realm HAProxy\ Statistics # 设置统计信息页面的领域名称
+    stats uri /status            # 设定统计信息的 URI 为 /status
 ```
 
 ![](https://github.com/Xiao254182/notes/blob/master/img/10/1.png)
@@ -133,33 +133,33 @@ nginx--2
 ! Configuration File for keepalived
 
 global_defs {
-   router_id HAPROXY
+   router_id HAPROXY                 # 设置全局的路由器 ID，唯一标识该节点，用于 VRRP 组中
 }
 
-vrrp_instance VI_1 {
-    state MASTER
-    interface ens32
-    virtual_router_id 51
-    priority 100
-    advert_int 1
-    authentication {
-        auth_type PASS
-        auth_pass 1111
+vrrp_instance VI_1 {                 # 定义一个 VRRP 实例，命名为 VI_1
+    state MASTER                     # 设置当前节点的状态为 MASTER（主节点）
+    interface ens32                  # 指定参与 VRRP 的网络接口，这里是 ens32
+    virtual_router_id 51             # 定义虚拟路由器的 ID，必须在同一实例内唯一
+    priority 100                     # 设置优先级，值越大表示优先级越高
+    advert_int 1                     # 广播间隔时间（秒），每 1 秒发送一次 VRRP 广告
+    authentication {                  # 配置身份验证选项
+        auth_type PASS               # 身份验证类型为密码（PASS）
+        auth_pass 1111               # 设置身份验证的密码为 1111
     }
-    virtual_ipaddress {
-        192.168.100.10
+    virtual_ipaddress {               # 定义虚拟 IP 地址
+        192.168.100.10                # 设置虚拟 IP 地址为 192.168.100.10
     }
 
-    track_script {
-        check_haproxy
+    track_script {                    # 监控脚本，确保 HAProxy 服务运行
+        check_haproxy                 # 指定监控脚本名称
     }
 }
 
-vrrp_script check_haproxy {
-        script "/etc/keepalived/check_haproxy.sh"
-        interval 1
-        fall 1
-        rise 2
+vrrp_script check_haproxy {          # 定义监控 HAProxy 的脚本
+        script "/etc/keepalived/check_haproxy.sh"   # 指定执行的脚本路径
+        interval 1                   # 每 1 秒执行一次脚本
+        fall 1                       # 如果脚本失败 1 次，则视为故障
+        rise 2                       # 如果脚本成功 2 次，则视为恢复
 }
 ```
 
