--- a/12.K8s笔记(持续更新).md
+++ b/12.K8s笔记(持续更新).md
@@ -3991,4 +3991,292 @@ NAME                 READY   STATUS    RESTARTS   AGE
 web-bb9b649d-wjbfv   1/1     Running   0          33m
 ```
 
+## 15.Job 和 CronJob
+
+### job
+
+Job 表示一次性任务，运行完成后就会停止。他会创建⼀个或者多个 Pod，并将继续重试 Pod 的执行，直到指定数量的 Pod 成功终止。 随着 Pod 成功结束，Job 跟踪记录成功完成的 Pod 个数。 当数量达到指定的成功个数阈值时，任务（即 Job）结束。 删除 Job 的操作会清除所创建的全部 Pod。 挂起  Job 的操作会删除 Job 的所有活跃 Pod，直到 Job 被再次恢复执行。
+
+ 一种简单的使用场景下，你会创建⼀个 Job 对象以便以⼀种可靠的方式运行某 Pod 直到完成。 当第⼀个 Pod 失败或者被删除（比如因为节点硬件失效或者重启）时，Job 对象 会启动⼀个新的 Pod。 
+
+你也可以使用 Job 以并行的方式运行多个 Pod。
+
+例如：
+
+```yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: my-job
+spec:
+  template:
+    metadata:
+    spec:
+      containers:
+      - name: my-job
+        image: registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2
+        command: ["echo","hello world"]
+      restartPolicy: Never    # restartPolicy 指定什么情况下需要重启容器。对于 Job，只能设置为 Never 或者 OnFailure
+```
+
+(PS:
+
+在 Kubernetes 中，`restartPolicy` 用于定义在容器退出后应该采取的重启策略。对于 **Pod** 来说，有以下几种重启策略：
+
+```
+1. Always：无论容器正常退出还是异常退出，都会重新启动容器。
+2. OnFailure：只有当容器以非零状态码退出时，才会重启容器。
+3. Never：容器退出后不会重启。
+```
+
+Job 的上下文
+
+对于 Job 资源，设计上是用来完成一次性任务的。在这种情况下，Job 只关心任务是否成功执行，而不是持续运行。Job 是为了确保某个工作（如批处理任务）能够成功完成。如果允许 `Always` 重启，可能会导致 Job 无法正确判断任务的最终状态，因此 Job 会变得不易管理和监控,而使用 `Never` 或 `OnFailure` 可以更清晰地反映任务的成功与失败状态，使得用户可以基于这些信息进行后续操作或决策，因此，`restartPolicy` 限制为以下两种：
+
+```
+1. Never：如果你不希望容器在任何情况下重启，在任务完成后可以选择此选项。
+2. OnFailure：如果你希望在容器因失败而退出时自动重启，可以选择此选项。
+```
+
+这也是为了保持任务的原子性和清晰性
+
+)
+
+创建它并查看结果
+
+```shell
+[root@k8s-master-1 ~]# kubectl apply -f my-job.yaml
+job.batch/my-job created
+
+[root@k8s-master-1 ~]# kubectl get jobs.batch
+NAME     COMPLETIONS   DURATION   AGE
+my-job   1/1           5s         40s
+# COMPLETIONS 已完成的
+# DURATION  这个job运行所花费的时间
+# AGE 这个job资源已经从创建到目前为止的时间
+
+[root@k8s-master-1 ~]# kubectl get pod
+NAME           READY   STATUS      RESTARTS   AGE
+my-job-bs2h7   0/1     Completed   0          55s
+# job会生成一个pod,当完成任务后会是Completed的状态
+
+# 看下这个job生成的pod日志
+[root@k8s-master-1 ~]# kubectl logs my-job-bs2h7
+hello world
+```
+
+job失败了会有什么现象出现呢？我们编辑这个job的yaml，把执行的命令改成一个不存在的命令看看会发生什么
+
+```shell
+[root@k8s-master-1 ~]# kubectl delete jobs.batch my-job
+job.batch "my-job" deleted
+
+[root@k8s-master-1 ~]# vim my-job.yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: my-job
+spec:
+  template:
+    metadata:
+    spec:
+      containers:
+      - name: my-job
+        image: registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2
+        command: ["echoo","hello world"]    # 此处故意写错echo命令
+      restartPolicy: Never
+
+[root@k8s-master-1 ~]# kubectl apply -f my-job.yaml
+job.batch/my-job created
+
+[root@k8s-master-1 ~]# kubectl get pod
+NAME           READY   STATUS               RESTARTS   AGE
+my-job-fqdlr   0/1     ContainerCreating    0          1s
+my-job-hv2b4   0/1     ContainerCannotRun   0          12s
+my-job-rtdr9   0/1     ContainerCannotRun   0          11s
+[root@k8s-master-1 ~]# kubectl get job
+NAME     COMPLETIONS   DURATION   AGE
+my-job   0/1           26s        26s
+# 可以观察到这个job因为不成功，并且restartPolicy重启模式是Never不会被重启，但它的job状态始终未完成，所以它会一直不停的创建新的pod，直到COMPLETIONS为1/1，对于我们这个示例，它显然永远都不会成功
+
+# 找一个pod看下事件描述，会很清晰地指出命令不存在
+[root@k8s-master-1 ~]# kubectl describe pod my-job-dtlwn
+······
+Events:
+  Type     Reason     Age   From               Message
+  ----     ------     ----  ----               -------
+  Normal   Scheduled  8s    default-scheduler  Successfully assigned default/my-job-dtlwn to k8s-node-2
+  Normal   Pulled     7s    kubelet            Container image "registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2" already present on machine
+  Normal   Created    7s    kubelet            Created container my-job
+  Warning  Failed     7s    kubelet            Error: failed to start container "my-job": Error response from daemon: failed to create shim task: OCI runtime create failed: runc create failed: unable to start container process: exec: "echoo": executable file not found in $PATH: unknown
+
+# 删除掉这个job，否则会无限创建pod
+[root@k8s-master-1 ~]# kubectl  delete job my-job
+job.batch "my-job" deleted
+
+# 试试把restartPolicy重启模式换成OnFailure观察看看
+[root@k8s-master-1 ~]# vim my-job.yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: my-job
+spec:
+  template:
+    metadata:
+    spec:
+      containers:
+      - name: my-job
+        image: registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2
+        command: ["echoo","hello world"]    # 此处故意写错echo命令
+      restartPolicy: OnFailure
+
+[root@k8s-master-1 ~]# kubectl apply -f my-job.yaml
+job.batch/my-job created
+
+# 可以看到它不会创建新的pod，而是会尝试重启自身，以期望恢复正常，这里看到已经重启了3次，还会持续增加到5，然后会被K8s给删除以尝试，因为这里只是job而不是deployment，它不会自己再启动一个新的pod，所以这个job等于就没有了，这里说明OnFailure是生效的，至少不会有那么多错误的pod出现了
+[root@k8s-master-1 ~]# kubectl get pod
+NAME           READY   STATUS              RESTARTS   AGE
+my-job-5l7gn   0/1     RunContainerError   3          3s
+[root@k8s-master-1 ~]# kubectl get jobs.batch
+NAME     COMPLETIONS   DURATION   AGE
+my-job   0/1           9s         9s
+```
+
+job也可以并行执行
+
+```yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: my-job
+spec:
+  parallelism: 2  # 并行执行2个job
+  template:
+    metadata:
+      name: my-job
+    spec:
+      containers:
+      - image: registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2
+        name: my-job
+        command: ["echo","Hello world"]
+      restartPolicy: OnFailure
+```
+
+创建并查看结果
+
+```shell
+[root@k8s-master-1 ~]# kubectl apply -f my-job.yaml
+job.batch/my-job created
+
+# job一共启动了2个pod，并且它们的AGE一样，可见是并行创建的
+[root@k8s-master-1 ~]# kubectl get pod
+NAME           READY   STATUS      RESTARTS   AGE
+my-job-7s28t   0/1     Completed   0          8s
+my-job-f6whn   0/1     Completed   0          8s
+```
+
+再来个组合测试下并行完成定制的总任务数量
+
+```yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: myjob
+spec:
+  completions: 6   # 此job完成pod的总数量
+  parallelism: 2   # 每次并发跑2个job
+  template:
+    metadata:
+      name: myjob
+    spec:
+      containers:
+      - name: hello
+        image: registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2
+        command: ["echo","hello world"]
+      restartPolicy: OnFailure
+```
+
+创建并查看结果
+
+```shell
+[root@k8s-master-1 ~]# kubectl apply -f  my-job.yaml
+job.batch/myjob created
+
+# 可以看到是每次并发2个job，完成6个总量即停止，符合预期
+[root@k8s-master-1 ~]# kubectl get pod
+NAME          READY   STATUS      RESTARTS   AGE
+myjob-5qcqf   0/1     Completed   0          13s
+myjob-bz5xh   0/1     Completed   0          9s
+myjob-bz7gk   0/1     Completed   0          9s
+myjob-l7mjr   0/1     Completed   0          13s
+myjob-qh2cl   0/1     Completed   0          11s
+myjob-skcwr   0/1     Completed   0          11s
+[root@k8s-master-1 ~]# kubectl get job
+NAME    COMPLETIONS   DURATION   AGE
+myjob   6/6           6s         15s
+```
+
+到此，job的内容就讲完了，在生产中，job比较适合用在CI/CD流水线中，作完一次性任务使用，我在生产中基本没怎么用这个资源
+
+### cronjob
+
+CronJob是 Kubernetes 中的一种资源类型，用于定期执行作业。它类似于 Linux 系统中的 cron，但在 Kubernetes 环境中提供了更强大的功能和可管理性。在K8s上用cronjob的另一个好处就是它是分布式的，执行的pod可以是在集群中的任意一台NODE上面
+
+主要特性：
+
+```
+定时调度：CronJob 可以根据预定的时间表定期创建 Job
+灵活的时间表达式：使用 Cron 表达式来定义调度规则，支持分钟、小时、日、月、星期等字段。
+历史管理：Kubernetes 会保留过往成功和失败的 Job 的记录，可以通过配置控制保留多少个历史记录。
+并发策略：可以指定在当前 Job 正在运行时是否允许新的 Job 开始执行，支持以下策略：
+        Allow: 允许并发执行。
+        Forbid: 不允许并发执行（即上一个 Job 结束后再开始下一个）。
+        Replace: 如果上一个 Job 还在运行，则用新的 Job 替代上一个 Job。
+成功和失败的处理：可以设置成功和失败的限制，确保系统稳定。
+```
+
+准备一下cronjob的yaml配置为my-cronjob.yaml
+
+```yaml
+apiVersion: batch/v1          # <---------  当前 CronJob 的 apiVersion
+kind: CronJob                 # <---------  当前资源的类型
+metadata:
+  name: hello
+spec:
+  schedule: "* * * * *"      # <---------  schedule 指定什么时候运行 Job，其格式与 Linux crontab 一致,这里 * * * * * 的含义是每一分钟启动一次
+  jobTemplate:               # <---------  定义 Job 的模板，格式与前面 Job 一致
+    spec:
+      template:
+        spec:
+          containers:
+          - name: hello
+            image: registry.cn-shanghai.aliyuncs.com/acs/busybox:v1.29.2
+            command: ["echo","date"]
+          restartPolicy: OnFailure
+```
+
+正常创建后，我们过几分钟来看看运行结果
+
+```shell
+[root@k8s-master-1 ~]# kubectl apply -f my-cronjob.yaml
+cronjob.batch/hello created
+
+# 这里会显示cronjob的综合信息
+[root@k8s-master-1 ~]# kubectl get cronjobs.batch
+NAME    SCHEDULE    SUSPEND   ACTIVE   LAST SCHEDULE   AGE
+hello   * * * * *   False     0        <none>          13s
+
+# 可以看到它每隔一分钟就会创建一个pod来执行job任务
+[root@k8s-master-1 ~]# kubectl get pod
+NAME                   READY   STATUS      RESTARTS   AGE
+hello-28756230-5w7f2   0/1     Completed   0          2m29s
+hello-28756231-z9vm8   0/1     Completed   0          89s
+hello-28756232-8rwnv   0/1     Completed   0          29s
+
+[root@k8s-master-1 ~]# kubectl get cronjobs.batch
+NAME    SCHEDULE    SUSPEND   ACTIVE   LAST SCHEDULE   AGE
+hello   * * * * *   False     0        27s             2m11s
+```
+
+cronjob定时任务在生产中的用处很多，这也是为什么上面job我说用得很少的缘故，我们可以把一些需要定时定期运行的任务，在K8s上以cronjob运行，依托K8s强大的资源调度以及服务自愈能力，我们可以放心的把定时任务交给它执行
 
