--- a/20.利用operator部署Elasticserach集群和kibana.md
+++ b/20.利用operator部署Elasticserach集群和kibana.md
@@ -105,7 +105,7 @@ elastic-operator-0   1/1     Running   0          2m58s
 
 本文使用`NFS`实现持久化；生产环境中应该使用分布式存储,如`ceph`
 
-##### (1)安装配置nfs(master节点)
+##### (1)安装配置nfs(所有节点)
 
 ```shell
 # yum install -y nfs-utils rpcbind
