--- a/24.Linux使用v2ray科学上网.md
+++ b/24.Linux使用v2ray科学上网.md
@@ -9,7 +9,8 @@
 从你的v2rayN中选择一个合适的地址
 ![](https://github.com/Xiao254182/notes/blob/master/img/24/1.png)
 
-（PS：https://v2rayshare.com/每天都会更新免费的节点订阅链接，但是可能一段时间后会挂，而且速度也比较慢，不过免费的要啥自行车啊，当作备用临时过渡一下就好了）
+（PS：https://v2rayshare.com/
+每天都会更新免费的节点订阅链接，但是可能一段时间后会挂，而且速度也比较慢，不过免费的要啥自行车啊，当作备用临时过渡一下就好了）
 
 点击设置中的参数设置
 
