--- a/22.工作中的问题记录(持续更新).md
+++ b/22.工作中的问题记录(持续更新).md
@@ -359,3 +359,194 @@ docker restart harbor-core
 4. 登录验证
 
 此时，您可以尝试使用用户名 `admin` 和密码 `000000` 登录 Harbor。
+
+### 3.直接使用软件包安装docker
+
+下载安装包
+
+```
+https://download.docker.com/linux/static/stable/
+```
+
+（PS:需要选择响应平台架构的软件包）
+
+解压安装包并将解压之后的docker文件移到 /usr/bin目录下
+
+```shell
+tar -zxvf docker-24.0.6.tgz && cp docker/* /usr/bin/
+```
+
+将docker注册成系统服务
+
+```shell
+#vim /etc/systemd/system/docker.service
+
+[Unit]
+Description=Docker Application Container Engine
+Documentation=https://docs.docker.com
+After=network-online.target firewalld.service
+Wants=network-online.target
+
+[Service]
+Type=notify
+ExecStart=/usr/bin/dockerd
+ExecReload=/bin/kill -s HUP $MAINPID
+LimitNOFILE=infinity
+LimitNPROC=infinity
+TimeoutStartSec=0
+Delegate=yes
+KillMode=process
+Restart=on-failure
+StartLimitBurst=3
+StartLimitInterval=60s
+
+[Install]
+WantedBy=multi-user.target
+```
+
+给文件增加可执行权限
+
+```shell
+chmod +x /etc/systemd/system/docker.service
+systemctl daemon-reload 
+```
+
+设置开机自启动
+
+```shell
+systemctl enable docker.service
+```
+
+启动docker
+
+```shell
+systemctl start docker
+```
+
+### 4.nexus清理磁盘空间
+
+(工具下载地址：)
+
+PS:这是个开源的工具，但是网上好多下载地址都挂了，这是我自己编译的，也可以根据需要自行修改
+
+```shell
+# 配置
+nexus-cli configure
+
+# 仓库地址
+Enter Nexus Host: http://127.0.0.1:8081
+
+# 仓库名称
+Enter Nexus Repository Name: docker-repo
+
+# 账号
+Enter Nexus Username: admin
+
+# 密码
+Enter Nexus Password: admin123
+
+# 查出所有镜像
+nexus-cli image ls
+
+# 查看某一镜像的所有的 tag
+nexus-cli image tags -name imagename
+
+# 查看某一镜像详细信息
+nexus-cli image info -name imagename -tag tagname
+
+# 删除指定 tag 的指定镜像
+nexus-cli image delete -name imagename -tag tagname
+
+# 仅保留 n 项 tag，其余全部删除
+nexus-cli image delete -name imagename -keep n
+
+# -imagename 镜像名
+# -keep n 表示保留几个tag
+```
+
+手动执行nexus任务清理空间
+
+![](https://github.com/Xiao254182/Notes/blob/master/img/22/1.png)
+
+### 5.磁盘拓展
+
+使用 `lvextend` 和 `resize2fs/xfs_growfs` 来扩展逻辑卷，并确保 `sdb` 设备上的 100G 空间可以被 `centos-root` 和 `centos-home` 这两个逻辑卷使用。步骤如下：
+
+#### 1. 确保 `/data` 目录下的数据已经迁移或备份
+
+因为 `/dev/sdb` 目前已经挂载到 `/data`，如果 `/data` 没有重要数据，建议先卸载：
+
+```shell
+umount /data
+```
+
+#### 2. 删除 `/dev/sdb` 上的现有分区
+
+**警告**：此操作会删除 `/dev/sdb` 上的所有数据，**请先确认 `/data` 目录下没有重要数据！**
+
+```shell
+fdisk /dev/sdb
+```
+
+在 `fdisk` 命令行中：
+
+1. 输入 `d` 并按回车（删除当前分区）
+2. 输入 `n` 并按回车（创建新分区）
+3. 选择 `p`（创建主分区）
+4. 选择分区编号 `1`
+5. 直接回车（使用默认起始扇区）
+6. 直接回车（使用全部 100G 空间）
+7. 输入 `w` 并按回车（保存并退出）
+
+#### 3. 创建 LVM 物理卷
+
+```shell
+pvcreate /dev/sdb1
+```
+
+#### 4. 将新分区加入 Volume Group
+
+你的 `centos-root` 和 `centos-home` 都在 `centos` VG（Volume Group）下，所以先扩展 `centos` VG：
+
+```shell
+vgextend centos /dev/sdb1
+```
+
+#### 5. 扩展逻辑卷
+
+##### (1) 扩展 `/` 逻辑卷（20G）
+
+```shell
+lvextend -L +20G /dev/mapper/centos-root
+```
+
+##### (2) 扩展 `/home` 逻辑卷（80G）
+
+```shell
+lvextend -L +80G /dev/mapper/centos-home
+```
+
+#### 6. 调整文件系统
+
+如果 `/` 和 `/home` 使用的是 `xfs` 文件系统：
+
+```shell
+xfs_growfs /
+xfs_growfs /home
+```
+
+如果使用 `ext4`，则执行：
+
+```shell
+resize2fs /dev/mapper/centos-root
+resize2fs /dev/mapper/centos-home
+```
+
+#### 7. 确认扩展是否生效
+
+```shell
+df -h
+```
+
+扩展成功后，`/` 目录应增加 20G，`/home` 目录应增加 80G。
+
