--- a/22.工作中的问题记录(持续更新).md
+++ b/22.工作中的问题记录(持续更新).md
@@ -425,9 +425,9 @@ systemctl start docker
 
 ### 4.nexus清理磁盘空间
 
-(工具下载地址：)
+(工具下载地址：https://github.com/Xiao254182/Notes/blob/master/img/22/nexus-cli)
 
-PS:这是个开源的工具，但是网上好多下载地址都挂了，这是我自己编译的，也可以根据需要自行修改
+PS:这是个开源的工具(https://github.com/sonatype-nexus-community/nexus-cli)，但是网上好多下载地址都挂了，这是我自己编译的，也可以根据需要自行修改
 
 ```shell
 # 配置
@@ -466,7 +466,7 @@ nexus-cli image delete -name imagename -keep n
 
 手动执行nexus任务清理空间
 
-![](https://github.com/Xiao254182/Notes/blob/master/img/22/1.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/22/15.png)
 
 ### 5.磁盘拓展
 
