--- a/22.工作中的问题记录(持续更新).md
+++ b/22.工作中的问题记录(持续更新).md
@@ -427,7 +427,7 @@ systemctl start docker
 
 (工具下载地址：https://github.com/Xiao254182/Notes/blob/master/img/22/nexus-cli)
 
-PS:这是个开源的工具(https://github.com/sonatype-nexus-community/nexus-cli)，但是网上好多下载地址都挂了，这是我自己编译的，也可以根据需要自行修改
+PS:这是个开源的工具，但是网上好多下载地址都挂了，这是我自己编译的，也可以根据需要自行修改(https://github.com/sonatype-nexus-community/nexus-cli)
 
 ```shell
 # 配置
