--- a/22.工作中的问题记录(持续更新).md
+++ b/22.工作中的问题记录(持续更新).md
@@ -550,3 +550,146 @@ df -h
 
 扩展成功后，`/` 目录应增加 20G，`/home` 目录应增加 80G。
 
+### 6.arm架构使用docker部署redis的问题
+
+问题环境：
+
+```shell
+root@localhost:/data# hostnamectl 
+   Static hostname: localhost
+         Icon name: computer-vm
+           Chassis: vm
+        Machine ID: a80231de02fc4ece8db4ac48476084cc
+           Boot ID: 5475319153c04803bb7fc33314b26f78
+    Virtualization: kvm
+  Operating System: UnionTech OS Server 20
+            Kernel: Linux 4.19.0-arm64-server
+      Architecture: arm64
+```
+
+使用
+
+```shell
+docker run -d --name redis --restart=always -p 6379:6379 redis:6
+```
+
+启动redis服务会报
+
+```shell
+1:C 10 Apr 2025 02:12:10.711 # oO0OoO0OoO0Oo Redis is starting oO0OoO0OoO0Oo
+1:C 10 Apr 2025 02:12:10.711 # Redis version=6.2.17, bits=64, commit=00000000, modified=0, pid=1, just started
+1:C 10 Apr 2025 02:12:10.711 # Warning: no config file specified, using the default config. In order to specify a config file use redis-server /path/to/redis.conf
+1:M 10 Apr 2025 02:12:10.713 * monotonic clock: POSIX clock_gettime
+1:M 10 Apr 2025 02:12:10.713 * Running mode=standalone, port=6379.
+1:M 10 Apr 2025 02:12:10.713 # WARNING: The TCP backlog setting of 511 cannot be enforced because /proc/sys/net/core/somaxconn is set to the lower value of 128.
+1:M 10 Apr 2025 02:12:10.713 # Server initialized
+1:M 10 Apr 2025 02:12:10.714 # WARNING Your kernel has a bug that could lead to data corruption during background save. Please upgrade to the latest stable kernel.
+1:M 10 Apr 2025 02:12:10.714 # Redis will now exit to prevent data corruption. Note that it is possible to suppress this warning by setting the following config: ignore-warnings ARM64-COW-BUG
+```
+
+这里有两个警告会导致redis容器无法启动
+（1）与 `somaxconn` 相关
+
+```shell
+WARNING: The TCP backlog setting of 511 cannot be enforced because /proc/sys/net/core/somaxconn is set to the lower value of 128.
+```
+
+只需要调整 `somaxconn` 参数来避免这个警告。运行以下命令来调整系统的最大 TCP 连接数
+
+```shell
+# 临时调整
+sysctl -w net.core.somaxconn=511
+
+# 永久修改
+echo "net.core.somaxconn=511" >> /etc/sysctl.conf && sysctl -p
+```
+
+（2）与内核相关的 bug
+
+```shell
+Redis will now exit to prevent data corruption. Note that it is possible to suppress this warning by setting the following config: ignore-warnings ARM64-COW-BUG
+```
+
+这通常是由于 ARM64 架构下的内核 bug 引起的。Redis 在启动时会自动检测到该问题，并在此情况下退出以防止数据损坏
+
+解决方法一是升级内核
+
+```shell
+root@localhost:/data# sudo apt-get upgrade linux-image-$(uname -r)
+正在读取软件包列表... 完成
+正在分析软件包的依赖关系树       
+正在读取状态信息... 完成       
+linux-image-4.19.0-arm64-server 已经是最新版 (4.19.90-5070)。
+```
+
+但在这个环境下内核已经是最新的了，没法升级，后续只能看UOS对redis的兼容了
+
+方法二就是在redis启动命令中忽略该警告，直接通过命令行传递参数即可
+
+```shell
+docker run -d --name redis --restart=always -p 6379:6379 redis:6 redis-server --ignore-warnings ARM64-COW-BUG
+```
+
+但这个方法可能会带来潜在的数据损坏风险
+
+### 7.mysql8.0+重置root密码
+
+修改配置文件，添加 skip-grant-table（跳过权限验证）
+
+```shell
+# 配置文件的地址按实际配置文件地址来
+
+echo "skip-grant-table" >> /etc/my.cnf
+```
+
+重启MySQL
+
+```shell
+systemctl restart mysqld
+```
+
+
+然后就可以直接免密码登录了
+
+```shell
+mysql -u root -p
+```
+
+进入数据库后重置密码（MySQL8.0+版本与之前版本有所不同）
+
+```shell
+flush privileges;
+use mysql;
+update user set authentication_string='' where user='root';
+ALTER user 'root'@'localhost' IDENTIFIED BY '<你的密码>';
+```
+
+
+关闭免密登陆
+
+```shell
+sed -i "s/skip-grant-table/#skip-grant-table/g" /etc/my.cnf
+```
+
+重启MySQL即可
+
+(PS:此时你的root密码虽然被重置为新的密码了，但是通过命令也可以看到重置密码的方式是将之前的root密码改为空然后重新赋予新的密码，因此此时的root并没有远程登陆的账号可用
+
+因此你可以添加远程登录权限
+
+```shell
+CREATE USER 'root'@'%' IDENTIFIED BY '<你的密码>';
+GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
+FLUSH PRIVILEGES;
+```
+
+也可以修改现有的 root 记录
+
+```shell
+UPDATE mysql.user SET Host = '%' WHERE User = 'root' AND Host = 'localhost';
+FLUSH PRIVILEGES;
+```
+
+但是 修改后将无法通过 `localhost` 登录 root，**强烈建议不要直接这样改**，而是新增一条 `root@%`，或新建一个远程用户
+
+)
