--- a/22.工作中的问题记录(持续更新).md
+++ b/22.工作中的问题记录(持续更新).md
@@ -693,3 +693,153 @@ FLUSH PRIVILEGES;
 但是 修改后将无法通过 `localhost` 登录 root，**强烈建议不要直接这样改**，而是新增一条 `root@%`，或新建一个远程用户
 
 )
+### 8.Socat 容器介绍和使用
+
+`socat`（Socket CAT）是一个强大的网络工具，用于创建任意两个地址之间的双向数据通道。它可以桥接 TCP、UDP、UNIX sockets、文件、串口等各种通信端点，非常适合在容器化环境中用作**服务代理、中转、调试、端口映射**等用途。
+
+---
+
+#### 容器镜像
+
+推荐使用镜像：
+
+```bash
+docker pull alpine/socat
+```
+
+该镜像基于 Alpine Linux，轻量且启动快速。
+
+---
+
+#### 常见用法示例与实际生产场景
+
+##### 1. Web 服务透明代理（用于内网穿透）
+
+```bash
+socat tcp-listen:8080,fork,reuseaddr tcp-connect:www.example.com:80
+```
+
+**实际应用：** 在没有公网 IP 的开发环境中，开发人员通过 `socat` 将本地容器的请求转发到部署在外部测试环境中的 Web API（如测试版电商网站）。解决了测试人员无法直接访问外部资源的问题。
+
+---
+
+##### 2. SSH 暴露跳板
+
+```bash
+socat tcp-listen:10022,fork,reuseaddr tcp-connect:192.168.1.100:22
+```
+
+**实际应用：** 公司内网的运维跳板服务器不允许直接暴露端口，使用 `socat` 将容器内的 SSH 服务映射到宿主机指定端口，实现对某些内部资源的远程访问权限隔离。
+
+---
+
+##### 3. Redis 端口中继（跨 Docker 网络访问）
+
+```bash
+socat TCP-LISTEN:6380,fork,reuseaddr TCP:172.21.0.30:6379
+```
+
+**实际应用：** 在 CI/CD 流水线中构建的 Redis 容器运行于 isolated 网络，为便于临时容器访问缓存服务，使用 `socat` 中继端口，无需改变主网络配置，提升部署灵活性。
+
+---
+
+##### 4. UNIX Socket ↔ TCP 转发
+
+```bash
+socat TCP-LISTEN:8081,fork UNIX:/var/run/nginx.sock
+```
+
+**实际应用：** 多个服务通过本地 Unix socket 向 Nginx 提交请求，但某些工具或监控系统（如 Prometheus exporter）只支持 TCP 访问，因此通过 `socat` 转换协议，实现对 Nginx 的访问监控。
+
+---
+
+##### 5. 串口设备 ↔ TCP（物联网调试）
+
+```bash
+socat /dev/ttyUSB0,b9600 TCP-LISTEN:12345,reuseaddr,fork
+```
+
+**实际应用：** 在嵌入式开发中，为远程开发人员开放串口设备访问权限，用于调试 Arduino、树莓派或其他物联网网关设备的数据通信。无需物理连接，即可远程串口调试。
+
+---
+
+##### 6. 多目标端口复制（数据流分发）
+
+```bash
+socat -v TCP-LISTEN:9000,fork \
+  SYSTEM:'tee >(socat - TCP:192.168.1.101:8001) | socat - TCP:192.168.1.102:8002'
+```
+
+**实际应用：** 某监控系统需要同时将业务日志流发送到日志分析平台（如 ELK）和实时告警系统（如 Prometheus + Alertmanager），通过 `socat + tee` 实现日志双向分发。
+
+---
+
+#### 简单端口代理示例：
+
+##### 背景:
+
+在生产环境中，MySQL 容器已通过端口 3306 暴露服务，但该容器所在的主机处于堡垒机后面，并且只开放了端口 30900。为了避免重新创建 MySQL 容器，我们希望通过 `socat` 创建一个代理容器，将外部访问的 30900 端口转发到 MySQL 容器的 3306 端口。这样，在连接到 VPN 后，用户就可以通过本地数据库客户端（如 Navicat）直接访问 MySQL。
+
+##### 解决方案：
+
+**MySQL 容器配置：**
+
+这是已经在生产环境中运行的 MySQL 容器配置，暴露了 3306 端口供应用访问。
+
+```yaml
+mysql:
+  image: mysql:8.0.27
+  container_name: mysql
+  networks:
+    20_jnet:
+      ipv4_address: 172.20.0.11
+  ports:
+    - "3306:3306"  # 容器内部端口3306映射到宿主机3306
+  environment:
+    MYSQL_ROOT_PASSWORD: 2ehw@2wqua%
+    TZ: Asia/Shanghai
+  volumes:
+    - /mount/mysql/data:/var/lib/mysql
+    - /mount/mysql/conf.d:/etc/mysql/conf.d
+  command: >
+    --default-authentication-plugin=mysql_native_password
+    --character-set-server=utf8mb4
+    --collation-server=utf8mb4_unicode_ci
+    --lower_case_table_names=1
+  restart: always
+```
+
+**通过 `socat` 创建代理容器：**
+
+通过 `socat` 工具，我们可以创建一个代理容器，使得访问宿主机的 30900 端口实际上会转发到 MySQL 容器的 3306 端口。这样，通过连接到 VPN 后，用户即可直接在本地客户端（如 Navicat）使用 `localhost:30900` 访问数据库。
+
+启动 `socat` 代理容器的命令如下：
+
+```bash
+docker run -d \
+  --name mysql-proxy \
+  --network 20_jnet \ # 加入到同样的docker内部网络中
+  --ip 172.20.0.50 \
+  -p 30900:30900 \  # 将宿主机的30900端口映射到容器的30900端口
+  --restart always \
+  alpine/socat \
+  tcp-listen:30900,fork,reuseaddr \
+  tcp-connect:172.20.0.11:3306  # 将流量转发到mysql容器的3306端口
+```
+
+- `-p 30900:30900`：将宿主机的 30900 端口映射到容器的 30900 端口。
+- `tcp-listen:30900,fork,reuseaddr`：监听宿主机的 30900 端口，`fork` 表示每个连接请求都创建一个新进程，`reuseaddr` 允许地址重用。
+- `tcp-connect:172.20.0.11:3306`：将请求转发到 `mysql` 容器的 3306 端口。
+
+##### 说明
+
+- 访问宿主机的 30900 端口，相当于直接访问 MySQL 容器的 3306 端口。
+- 在 VPN 连接后，你可以通过 Navicat 或其他 MySQL 客户端使用 `localhost:30900` 连接到数据库，而无需直接访问 MySQL 容器的端口。
+
+---
+
+#### 注意事项
+
+- 容器之间推荐使用自定义 Docker 网络（如 bridge 类型）实现内网互通。
+- `socat` 不支持加密和认证，不建议直接暴露在公网中使用。
+- 适合用于信任网络内的服务代理、测试验证或工具链集成。
