--- a/28.k8s集群使用Skywalking-SWCK实现自动注入java探针.md
+++ b/28.k8s集群使用Skywalking-SWCK实现自动注入java探针.md
@@ -6,7 +6,7 @@
 
 在 Kubernetes 中，SkyWalking 提供了 SWCK（SkyWalking Kubernetes Operator）来部署在 Kubernetes 环境中。Skywalking-swck支持通过 **Sidecar 注入** 或 **InitContainer 注入**的方式在 Pod 启动时自动把探针挂载并注入到相应的pod中。
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\1.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/1.png)
 
 在 SkyWalking 中，Java 应用需要集成 **Java 探针（Java Agent）**，用于采集运行时的性能数据并将其上报到 SkyWalking 后端。Java 探针是一个基于 **Java Agent 技术（即 JVM 插桩）** 的组件，能够在应用启动时通过 `-javaagent` 参数动态附加到 JVM 中，无需修改业务代码，即可实现对方法调用、数据库操作、HTTP 请求等的字节码增强。
 
@@ -114,7 +114,7 @@ SWCK 的证书都是由证书管理器分发和验证，因此需要先安装证
 # kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.18.2/cert-manager.yaml
 ```
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\2.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/2.png)
 
 默认情况下，cert-manager 将安装在`cert-manager` 命名空间中。
 
@@ -132,7 +132,7 @@ cert-manager-webhook-b98f876dc-76dmm       1/1     Running   0          4m31s
 
 注：在skywalking-swck operator的yaml文件中使用的镜像`apache/skywalking-swck:latest`是没有arm架构的镜像的（至少我没找着）
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\3.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/3.png)
 
 因此x86架构的直接执行
 
@@ -146,7 +146,7 @@ cert-manager-webhook-b98f876dc-76dmm       1/1     Running   0          4m31s
 
 ##### 2.3.1 编译并打包arm架构镜像
 
-首先我们先去他的代码仓库找到0.9.0版本的源码下载到本地![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\4.png)
+首先我们先去他的代码仓库找到0.9.0版本的源码下载到本地![](https://github.com/Xiao254182/Notes/blob/master/img/28/4.png)
 
 ```shell
 root@DESKTOP-71E09B1:~/build# ls
@@ -346,7 +346,7 @@ release-build: generate ## Build binary for release (support ARM/AMD64)
      RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 GO111MODULE=on go build -a -o manager main.go
      ```
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\5.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/5.png)
 
 执行构建命令
 
@@ -354,7 +354,7 @@ release-build: generate ## Build binary for release (support ARM/AMD64)
 root@DESKTOP-71E09B1:~/build/skywalking-swck-0.9.0/operator# make ARCH=arm64 docker-build
 ```
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\7.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/7.png)
 
 ```shell
 root@DESKTOP-71E09B1:~/build/skywalking-swck-0.9.0/operator# docker images -a | grep skywalking-swck
@@ -398,9 +398,9 @@ bin  CHANGES.md  config  Dockerfile  LICENSE  licenses  LICENSE.tpl  Makefile  N
 
 `kubebuilder/kube-rbac-proxy:v0.8.0`也要换，因为在gcr.io中没有找到arm架构的镜像，在docker hub倒是有arm架构的，因此也要修改
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\8.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/8.png)
 
-![image-20250708173156366](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\6.png)
+![image-20250708173156366](https://github.com/Xiao254182/Notes/blob/master/img/28/6.png)
 
 ```shell
 [系统未激活][root@k8s-master skywalking-swck-0.9.0-bin]# kubectl apply -f config/operator-bundle.yaml
@@ -479,7 +479,7 @@ namespace/default labeled
 
 然后编辑`default`命名空间下的服务的`deployment`控制器的配置
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\9.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/9.png)
 
 保存修改后pod重启
 
@@ -491,7 +491,7 @@ xjzzdy-server-54f8974d58-pzkf6   0/1     Init:0/1   0          94s
 
 此时发现pod正在初始化，查看pod发现服务pod自动挂载了一个initContainer容器，并且主容器中挂载进了sky-agent
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\10.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/10.png)
 
 此时我们将skywalking-ui的访问类型改为nodeport的方式在浏览器上访问
 
@@ -505,6 +505,6 @@ service/default-ui patched
 default-ui                        NodePort    10.96.56.49      <none>        80:30627/TCP                                                                                                57m
 ```
 
-![](D:\Obsidian\Obsidian Vault\28.k8s集群使用skywalking-swck实现自动注入java-agent探针\28\11.png)
+![](https://github.com/Xiao254182/Notes/blob/master/img/28/11.png)
 
 我们可以看到服务被成功注册到oap中并在ui展示
